--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bootstrap</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+    <!-- BootStrapのcssファイル読み込み -->
+    <link href="./umi/css/bootstrap.min.css" rel="stylesheet">
+    <title>BootStrap</title>
 </head>
 <body>
-    <h1>Hello,World</h1>
+    <nav class="navbar navbar-light bg-light">
+        <a class="navbar-brand mb-0 h1" href="#!">Header</a>
+    </nav>
+    <footer style="background-color: bisque;">Footer</footer>
+    <!-- jQuery読み込み -->
+    <script src="./jQuery/jquery-3.5.1.min.js"></script>
+    <!-- BootStrapのjsファイル読み込み -->
+    <script src="./umi/js/bootstrap.min.js"></script>
 </body>
 </html>
